--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,7 +8,7 @@ body {
     background-position: center;
     background-size: cover;
     width: 100vw;
-    height: 100vh;
+    height: 800px;
 }
 
 .heading{
@@ -62,5 +62,9 @@ h2{
     .main-image {
         width: 100vw;
         height: 70vh;
+    }
+
+    .heading span {
+        font-size: 42px;
     }
 }
