--- a/styles/styles.css
+++ b/styles/styles.css
@@ -107,3 +107,37 @@ h2{
     background-color: rgb(48, 46, 46);
 
 } 
+
+
+/* spinner */
+.spinner{
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    background-color: rgba(255,255,255,0.5);
+    z-index:9999;
+    display:none;
+}
+
+.lds-hourglass {
+    display: inline-block;
+    position: fixed;
+    transform: translate(-50%, -50%);
+    width: 80px;
+    height: 80px;
+    top: 50vh;
+    left: 50vw;
+    z-index:99999;
+  }
+  .lds-hourglass:after {
+    content: " ";
+    display: block;
+    border-radius: 50%;
+    width: 0;
+    height: 0;
+    margin: 8px;
+    box-sizing: border-box;
+    border: 32px solid red;
+    border-color: pink transparent pink transparent;
+    animation: lds-hourglass 1.2s infinite;
+  }
