--- a/styles/styles.css
+++ b/styles/styles.css
@@ -112,7 +112,7 @@ h2{
 /* bacground image */
 .backimg {
     width: 100%;
-    height: 60vh;
+    height: 550px;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
