--- a/styles/styles.css
+++ b/styles/styles.css
@@ -106,7 +106,11 @@ h2{
 .dark-theme .modal-footer {
     background-color: rgb(48, 46, 46);
 
-} 
+}
+
+body {
+    overflow-y: scroll;
+}
 
 
 /* bacground image */
