--- a/styles/styles.css
+++ b/styles/styles.css
@@ -217,3 +217,14 @@ body {
 .card:nth-child(odd) {
     left: -100px;
 }
+
+/* Resume view  */
+.resume {
+    width: 100%;
+    height: 500px;
+    overflow: scroll;
+}
+
+.resume::-webkit-scrollbar {
+    display: none;
+  }
