--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,6 +36,7 @@ body {
     padding: 20px;
     border-radius: 5px;
     background: rgba(200, 200, 200, 0.5);
+    cursor: pointer;
 }
 
 .padding-row{
@@ -210,7 +211,8 @@ body {
 /* cards transition  */
 .card {
     opacity: 0;
-    transition: opacity 2s ease, left 1s ease, right 2s ease;
+    transition: opacity 2s ease, left 1s ease, right 1s ease;
+    position: relative;
 }
 
 .card:nth-child(even) {
@@ -225,9 +227,34 @@ body {
 .resume {
     width: 100%;
     height: 500px;
+    border: 2px solid black;
     overflow: scroll;
 }
 
 .resume::-webkit-scrollbar {
     display: none;
-  }
+}
+
+/* Scial media design  */
+.social-media a {
+    transition: all .4s ease-in-out;
+    transform-origin: center;
+}
+
+.social-media a:hover {
+    transform: scale(1.2);
+    transform: rotate(360deg);
+    margin-right: 10px;
+}
+
+/* aligning the project lists   */
+.gd-align .row {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+.gd-align .row .col {
+    margin-left: 0;
+    float: left;
+}
