robot.txt seo file

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -65,7 +65,8 @@ h2{
 }
 
 .padding-row p{
-    font-family: 'Piedra', cursive;
+    font-family: 'Andika New Basic', sans-serif !important;
+    font-size: large;
 }
 
 
