--- a/styles/styles.css
+++ b/styles/styles.css
@@ -298,3 +298,122 @@ body {
 .inlinepblock p {
     display: inline-block;
 }
+
+
+#setup {
+    position: fixed;
+    z-index: 9999;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgb(22, 21, 21);
+    color: white;
+    text-align: center;
+    transition: display 1s ease;
+    overflow: hidden;
+}
+
+#setup h5 {
+    margin: 80px;
+    font-size: 42px;
+}
+
+#setup .first-anime {
+    border-top: 3px solid rgb(83, 187, 83);
+    border-bottom: 3px solid rgb(83, 187, 83);
+    overflow: hidden;
+    padding: 20px 0;
+    max-height: 300px;
+    transition-delay: 0.5s;
+    position: relative;
+    transition: max-height 1.5s ease, padding 1.5s ease;
+}
+
+.first-anime-close {
+    max-height: 0 !important;
+    padding: 0 !important;
+}
+
+.first-anime .blue-anime {
+    position: relative;
+    padding: 5px;
+    display: inline-block;
+    font-size: large;
+    overflow: hidden;
+    color:transparent;
+}
+
+.first-anime .blue-anime::before {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    left: 100%;
+    width: 100%;
+    height: 100%;
+    color: rgb(8, 101, 241);
+    background-color: rgb(8, 101, 241);
+    transition: left 1s ease-out, color 1.5s ease-in;
+}
+
+.first-anime .go-left::before{
+    left: -100%;
+}
+
+.first-anime .purple-anime {
+    position: relative;
+    padding: 5px;
+    display: inline-block;
+    font-size: large;
+    overflow: hidden;
+    color:transparent;
+}
+
+.first-anime .purple-anime::before {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    color: rgb(8, 101, 241);
+    background-color: rgb(97, 8, 241);
+    transition: left 1s ease-out, color 1.5s ease-in;
+}
+
+.first-anime .go-right::before{
+    left: 100%;
+}
+
+.second-anime {
+    border-bottom: 3px solid rgb(83, 187, 83);
+    overflow: hidden;
+    position: relative;
+    max-height: 0;
+    transition: max-height 1.5s ease;
+    font-size: medium;
+}
+
+.second-anime-open {
+    max-height: 250px;
+}
+
+.bounce-ball {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    transform-origin: center;
+    transition: all 1s ease;
+    overflow: hidden;
+}
+
+.bounce-ball .box {
+    position: relative;
+    align-items: center;
+    margin: 10px auto;
+    z-index: 9999;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;         /* Turns a square into a circle   */
+    background-color: #FF5722;
+    transition: all 1s ease;
+}
