--- a/styles/styles.css
+++ b/styles/styles.css
@@ -316,7 +316,9 @@ body {
 }
 
 #setup h5 {
-    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+    /* text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073; */
+    text-shadow: 0 0 3px red , 0 0 35px #e62f8a;
+    color: white;
     font-weight: bold;
     font-family: 'Niconne', cursive;
 }
